# simpledb-client-rs

./: Cargo.toml  README.md  build.rs
src/: client.rs
src/protos/: mod.rs
