[package]
name = "simpledb-client-rust"
version = "0.1.0"
authors = ["triplewy <triplewy@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = "~2"
dirs = "2.0.2"
shrust = "0.0.7"

[build-dependencies]
protoc-grpcio = "1.0.2"